Fixed guide landing page spacings

--- a/core/sass/main.css
+++ b/core/sass/main.css
@@ -190,6 +190,11 @@ a.labelled-image-card .card-header h3 {
     flex-direction: column-reverse;
   }
 }
+@media (max-width: 961px) {
+  .reverse-columns-xl {
+    flex-direction: column-reverse;
+  }
+}
 .icon, .capital-invest-landing-page .capital-invest-landing-page-how-we-help .contact-button, .invest-landing-page .landing-page-how-we-help .contact-button {
   height: 60px;
   width: 60px;
@@ -1097,6 +1102,17 @@ body.js-enabled .landing-page .country-selector-dialog select {
 }
 .about-uk-why-choose-the-uk-page .article-section img {
   width: 100%;
+}
+.about-uk-why-choose-the-uk-page #ebook-section .container {
+  overflow: visible;
+}
+.about-uk-why-choose-the-uk-page #ebook-section .column-quarter-l {
+  text-align: center;
+}
+.about-uk-why-choose-the-uk-page #ebook-section img {
+  width: 100%;
+  max-width: 299px;
+  box-shadow: 0 0 4px 4px rgba(240, 240, 240, 0.5);
 }
 .about-uk-why-choose-the-uk-page #contact-us-section {
   padding-top: 120px;
